# scanner-rs

./: .env  .gitignore  CLAUDE.md  Cargo.toml
docs/: bg-busy-contention.md  tws-market-data.md
sql/: migrate.sql
src/: catalyst.rs  config.rs  enrichment.rs  error.rs  history.rs  lib.rs  main.rs  models.rs  scanner.rs
src/cli/: mod.rs
src/engine/: mod.rs
src/gui/: app.rs  mod.rs  theme.rs
src/gui/components/: mod.rs  side_rail.rs
src/gui/views/: log.rs  mod.rs  monitor.rs  scanner.rs  settings.rs  test.rs
src/tui/: app.rs  ui.rs
src/tws/: messages.rs  mod.rs
